# alpha_agent

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  sec_ticker_mapping_dump.txt  structure.txt
backend/: events.py  server.py
backend/agents/: __init__.py  analyst.py  critic.py  data_agent.py  supervisor.py
backend/evals/: eval_cases.json  eval_result.py  evals_run.py  evaluation_report.md  standard.md
backend/evals/outputs/: eval_results.json
backend/graph/: __init__.py  builder.py  router.py
backend/infrastructure/: __init__.py  analysis_run_repository.py  cik_repository.py  db.py  get_embedding.py  query_vector_db.py  schema_initializer.py  search_engine.py  verify_database_state.py
backend/pipelines/: __init__.py  sec_chunker.py  sec_pipeline.py  yf_pipeline.py
backend/schemas/: __init__.py  state.py
backend/scripts/: refresh_cik_mapping.py
backend/services/: __init__.py  analyst_service.py  critic_service.py  data_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_analyze_api_integration.py  test_analyze_persistence.py  test_critic_cash_flow.py  test_sse_contract.py
backend/tests/unit_test/: test_critic_service.py  (+4 more)
docs/: sse_contract.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
src/alpha_agent_mvp/: data_pipeline.py  data_sec_pipeline.py  data_yf_pipeline.py  db_initializer.py  graph_builder.py  main_rag.py  nodes.py  search_engine.py  sec_chunker.py  server.py  states.py  test_with_critique.py  test_yf_sec_search.py
src/test/: data_pipeline.py
(+26 files in other folders)
