[project]
name = "alpha-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langgraph (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "openai (>=2.41.0,<3.0.0)",
    "yfinance (>=1.4.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
packages = [{include = "alpha_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
